# VkDynamicRenderingTemplate

./: .clang-format  CMakeLists.txt  LICENSE
include/: dynamic_rendering.h  image_tools.h
shaders/: CMakeLists.txt  fragment.frag  vertex.vert
src/: dynamic_rendering.cpp  image_tools.cpp  main.cpp
